--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "ai": "^4.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -56,6 +57,7 @@
     "lucide-react": "^0.460.0",
     "next": "^15.0.3",
     "next-themes": "^0.4.3",
+    "openai": "^4.73.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
